# recoani

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  recoani.sql
docker/calc/: Dockerfile  requirements.txt
docker/collect/: Dockerfile  requirements.txt
docker/collect_data/: Dockerfile
recoani_batch/: バッチ処理について.txt
recoani_batch/calc/: requirements.txt
recoani_batch/calc/batch/: batch.sh  calc_recommend_list.py  tfidf.ipynb  tfidf.py
recoani_batch/calc/src/: calc_recommend_list.py
recoani_batch/calc/sub/: tf-idf.ipynb  tf-idf.py
recoani_batch/collect_data/: Dockerfile  Dockerfile-test  requirements.txt
recoani_batch/collect_data/src/: 03_retrieve_anime_html.py  09_extract_related_anime.py  10_extract_outline_each_episode.py  batch.sh  tasks.py  test.py
recoani_web/: Dockerfile  requirements.txt
recoani_web/recoani_web/config/: wsgi.py
recoani_web/recoani_web/recommend/: models.py  urls.py  views.py
recoani_web/web/: Dockerfile  requirements.txt
recoani_web/web/config/: settings.py  urls.py
recoani_web/web/recommend/: models.py  urls.py
src/app/: Dockerfile  env  requirements.txt
src/batch/: Dockerfile  requirements.txt  tasks.py
src/batch/calc/: calc_recommend_list.py  morph.py  mytokenize.py  normalize.py
src/batch/collect/: 01_retrieve_anime_list_page_html_for_each_initial.py  02_extract_changes.py  03_retrieve_anime_html.py  04_extract_anime_data.py  04_extract_data.py  05_extract_anime_cast.py  05_retrieve_ongoing_anime_html.py  08_extract_anime_genre.py  collect01_retrieve_anime_list_page_html_for_each_initial.py  collect04_extract_data.py  collect05_retrieve_ongoing_anime_html.py  tasks.py  test.py
src/common/crawl/: crawler.py  danimes.py  url_operation.py
src/common/db/: DBCommand.py  (+1 more)
(+31 files in other folders)
