[tool.poetry]
name = "recoani"
version = "0.1.0"
description = ""
authors = ["toshi <iskwts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mysql-connector-python = "^8.0.24"
invoke = "^1.5.0"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"
chromedriver-binary = "90.0.4430.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
