[tool.poetry]
name = "recoani"
version = "0.1.0"
description = ""
authors = ["toshi <iskwts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mysql-connector-python = "^8.0.25"
invoke = "^1.5.0"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"
chromedriver-binary = "90.0.4430.24.0"
numpy = "^1.20.3"
mecab-python3 = "^1.0.3"
sklearn = "^0.0"
gunicorn = "^20.1.0"
Django = "^3.2.4"
python-dotenv = "^0.17.1"
requests = "^2.25.1"
mysqlclient = "^2.0.3"
pre-commit = "^2.13.0"
autopep8 = "v1.5.7"
flake8 = "3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
